# laWiki

./: .gitignore  Despliegue laWiki.vpd  NoSQLDBEntityRelationshipDiagram.vpp  README.md  deployment.vpp  despliegue.vpp  ifml.json  ifml_inicial.json  ifml_model.json
api/microservices/comments/: README.md  openapi.yaml  setup.cfg
api/microservices/comments/.openapi-generator/: FILES
api/microservices/comments/src/openapi_server/: main.py
api/microservices/comments/src/openapi_server/apis/v1/: v1_internal_api.py  v1_internal_api_base.py  v1_public_api.py  v1_public_api_base.py
api/microservices/comments/src/openapi_server/apis/v2/: v2_internal_api.py  v2_internal_api_base.py  v2_public_api.py  v2_public_api_base.py
api/microservices/comments/src/openapi_server/impl/: api_calls.py  default_comments_api.py  emails_service.py  internal_comments_api.py  operations.py  pipelines.py
api/microservices/comments/src/openapi_server/impl/v1/: v1_internal.py  (+1 more)
api/microservices/comments/src/openapi_server/models/: author.py  comment.py  comment_list_response.py  new_comment.py
api/microservices/comments/tests/: test_default_api.py  test_v1_internal_api.py  test_v1_public_api.py  test_v2_internal_api.py  test_v2_public_api.py
api/ratings/: README.md  RatingsAPI-v1.0.json  openapi.yaml  requirements.txt  setup.cfg
api/ratings/src/openapi_server/: main.py
api/ratings/src/openapi_server/apis/: default_api.py  default_api_base.py
api/ratings/src/openapi_server/impl/: RatingsManager.py  ratings_manager.py
api/ratings/src/openapi_server/models/: author.py  average_rating.py  inline_response200.py  new_rating.py  rating.py  rating_list.py
api/ratings/tests/: test_default_api.py
api/tags/: openapi.yaml  requirements.txt  setup.cfg
api/tags/.openapi-generator/: FILES
api/tags/src/openapi_server/: main.py
api/tags/src/openapi_server/apis/: admins_api.py  admins_api_base.py  default_api.py  default_api_base.py  editors_api.py  editors_api_base.py
api/tags/src/openapi_server/impl/: TagsManager.py  admins_manager.py  api_calls.py  default_manager.py  editors_manager.py
api/tags/src/openapi_server/models/: new_tag.py  tag_id_list.py
api/tags/tests/: test_admins_api.py  test_default_api.py
api/wikis/: README.md  openapi.yaml  requirements.txt  setup.cfg
api/wikis/.openapi-generator/: FILES
api/wikis/src/openapi_server/: main.py
api/wikis/src/openapi_server/apis/: admins_api.py  admins_api_base.py  default_api.py  default_api_base.py  internal_api.py  internal_api_base.py
api/wikis/src/openapi_server/impl/: misc.py  wiki_api.py
api/wikis/src/openapi_server/models/: author.py  id_ratings_body.py  id_tags_body.py  new_wiki.py  simplified_wiki.py  tag.py  wiki.py  wiki_list.py
api/wikis/tests/: test_internal_api.py
docs/api/api_gateway/api_gateway_test/: README.md  openapi.yaml  setup.cfg
docs/api/api_gateway/api_gateway_test/.openapi-generator/: FILES
docs/api/api_gateway/api_gateway_test/src/openapi_server/: main.py  security_api.py
docs/api/api_gateway/api_gateway_test/tests/: test_v1_public_api.py  test_v2_admins_api.py  test_v2_editors_api.py  test_v2_public_api.py
(+631 files in other folders)
