[metadata]
name = openapi_server
version = 1.0
description = API for the Ratings of laWiki web appplication. It provides all endpoints related to CRUD operatios for ratings.
long_description = file: README.md
keywords = OpenAPI RatingsAPI
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
