[metadata]
name = openapi_server
version = 1.0
description = This API is used to perform operations on the wikis of laWiki
long_description = file: README.md
keywords = OpenAPI Wiki API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
