[metadata]
name = openapi_server
version = 2.0
description = API for the Comments microservice of laWiki web appplication. It provides all endpoints related to CRUD operatios for articles comments.
long_description = file: README.md
keywords = OpenAPI CommentsAPI
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
